// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpecDialog matches snapshot no initSpec 1`] = `
<div
  class="bp4-portal"
>
  <div
    aria-live="polite"
    class="bp4-overlay bp4-overlay-open bp4-overlay-scroll-container"
  >
    <div
      class="bp4-overlay-start-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp4-overlay-backdrop bp4-overlay-appear bp4-overlay-appear-active"
    />
    <div
      class="bp4-dialog-container bp4-overlay-content bp4-overlay-appear bp4-overlay-appear-active"
    >
      <div
        aria-labelledby="title-bp-dialog-0"
        class="bp4-dialog spec-dialog"
        role="dialog"
      >
        <div
          class="bp4-dialog-header"
        >
          <h4
            class="bp4-heading"
            id="title-bp-dialog-0"
          >
            test
          </h4>
          <button
            aria-label="Close"
            class="bp4-button bp4-minimal bp4-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-small-cross"
              icon="small-cross"
            >
              <svg
                data-icon="small-cross"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class=" ace_editor ace_hidpi ace-tm spec-dialog-textarea placeholder-padding"
          id="ace-editor"
          style="width: 100%; height: 500px; font-size: 12px;"
        >
          <textarea
            autocapitalize="off"
            autocorrect="off"
            class="ace_text-input"
            spellcheck="false"
            style="opacity: 0; font-size: 1px;"
            wrap="off"
          />
          <div
            aria-hidden="true"
            class="ace_gutter"
          >
            <div
              class="ace_layer ace_gutter-layer ace_folding-enabled"
              style="height: 1000000px;"
            />
          </div>
          <div
            class="ace_scroller"
            style="line-height: 0px;"
          >
            <div
              class="ace_content"
            >
              <div
                class="ace_layer ace_print-margin-layer"
              >
                <div
                  class="ace_print-margin"
                  style="left: 10px; visibility: hidden;"
                />
              </div>
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_text-layer"
                style="height: 1000000px; margin: 0px 10px;"
              />
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_cursor-layer ace_hidden-cursors"
              >
                <div
                  class="ace_cursor"
                />
              </div>
            </div>
            <div
              class="ace_comment ace_placeholder"
              style="padding: 0px 9px; position: absolute; z-index: 3;"
            >
              { JSON spec... }
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-v"
            style="display: none; width: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="width: 20px;"
            >
               
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-h"
            style="display: none; height: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="height: 20px;"
            >
               
            </div>
          </div>
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
          >
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            />
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            >
              XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
            </div>
          </div>
        </div>
        <div
          class="bp4-dialog-footer"
        >
          <div
            class="bp4-dialog-footer-actions"
          >
            <button
              class="bp4-button"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp4-button bp4-disabled bp4-intent-primary"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp4-overlay-end-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`SpecDialog matches snapshot with initSpec 1`] = `
<div
  class="bp4-portal"
>
  <div
    aria-live="polite"
    class="bp4-overlay bp4-overlay-open bp4-overlay-scroll-container"
  >
    <div
      class="bp4-overlay-start-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp4-overlay-backdrop bp4-overlay-appear bp4-overlay-appear-active"
    />
    <div
      class="bp4-dialog-container bp4-overlay-content bp4-overlay-appear bp4-overlay-appear-active"
    >
      <div
        aria-labelledby="title-bp-dialog-1"
        class="bp4-dialog spec-dialog"
        role="dialog"
      >
        <div
          class="bp4-dialog-header"
        >
          <h4
            class="bp4-heading"
            id="title-bp-dialog-1"
          >
            test
          </h4>
          <button
            aria-label="Close"
            class="bp4-button bp4-minimal bp4-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-small-cross"
              icon="small-cross"
            >
              <svg
                data-icon="small-cross"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class=" ace_editor ace_hidpi ace-tm spec-dialog-textarea placeholder-padding"
          id="ace-editor"
          style="width: 100%; height: 500px; font-size: 12px;"
        >
          <textarea
            autocapitalize="off"
            autocorrect="off"
            class="ace_text-input"
            spellcheck="false"
            style="opacity: 0; font-size: 1px;"
            wrap="off"
          />
          <div
            aria-hidden="true"
            class="ace_gutter"
          >
            <div
              class="ace_layer ace_gutter-layer ace_folding-enabled"
              style="height: 1000000px;"
            />
          </div>
          <div
            class="ace_scroller"
            style="line-height: 0px;"
          >
            <div
              class="ace_content"
            >
              <div
                class="ace_layer ace_print-margin-layer"
              >
                <div
                  class="ace_print-margin"
                  style="left: 10px; visibility: hidden;"
                />
              </div>
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_text-layer"
                style="height: 1000000px; margin: 0px 10px;"
              />
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_cursor-layer ace_hidden-cursors"
              >
                <div
                  class="ace_cursor"
                />
              </div>
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-v"
            style="display: none; width: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="width: 20px;"
            >
               
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-h"
            style="display: none; height: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="height: 20px;"
            >
               
            </div>
          </div>
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
          >
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            />
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            >
              XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
            </div>
          </div>
        </div>
        <div
          class="bp4-dialog-footer"
        >
          <div
            class="bp4-dialog-footer-actions"
          >
            <button
              class="bp4-button"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp4-button bp4-intent-primary"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp4-overlay-end-focus-trap bp4-overlay-appear bp4-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;
